--- a/twitter-backend/package.json
+++ b/twitter-backend/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev":"nodemon server.js",
-    "start":"node server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "build": "npm install && npm install --prefix ../twitter-frontend && npm run build --prefix ../twitter-frontend"
   },
   "keywords": [],
   "author": "",
-  "type":"module",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -24,6 +25,7 @@
     "mongoose": "^8.5.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.4"
   }
 }
